# libdermtiff

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml  codeql.yml
libdermtiff/: CMakeLists.txt  dermtiff.def
libdermtiff/include/libdermtiff/: dermtiff.hpp
libdermtiff/include/libdermtiff/dermtiff/: common.hpp  derm_tiff.hpp  io.hpp  message.hpp  pencil.hpp  type.hpp
libdermtiff/src/: common.cpp  derm_tiff.cpp  dermtiff.cpp  io.cpp  message.cpp  message_detail.hpp  pencil.cpp  tiffio.cpp  type.cpp  util.cpp  util.hpp
libdermtiff/src/impl/derm_tiff/: derm_tiff.cpp  derm_tiff.hpp
libdermtiff/src/impl/message/: message.cpp  message.hpp
libdermtiff/src/impl/tiff_reader/: tiff_reader.cpp  tiff_reader.hpp
libdermtiff/src/impl/tiff_util/: tiff_util.cpp  tiff_util.hpp
scripts/: setup_macos.sh
scripts/linux/: build_library.sh  install_dependency.sh  setup.sh
scripts/macos/: build_library.sh  install_dependency.sh  setup.sh
scripts/windows/: build_library.ps1  install_dependency.ps1  setup.ps1
test/: CMakeLists.txt  message.cpp  pencil.cpp  pencilToString.cpp  testPencilParse.cpp  testPencilToString.cpp  testTIFFRead.cpp  testTIFFWrite.cpp  tiffRead.cpp  tiffWrite.cpp  tiff_read.cpp  tiff_write.cpp
test/images/: v0.tiff  v1.tiff
